...
                    
            let text = textContent.joined(separator: "\n")
            
            let alertModel = AlertModel(
                title: "Этот раунд окончен!",
                message: text,
                buttonText: "Сыграть еще раз") { [weak self] in
                guard let self = self else { return }
                self.restartGame()
                self.questionFactory?.requestNextQuestion()
            }
            
            self.viewController?.alertPresenter?.presentAlert(alertView: alertModel)
...
